# get_ittf_info

./: .pyproject.toml.swp  CHANGELOG.md  CONTRIBUTING.md  Demonstration.ipynb  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/get_ittf_info/: __init__.py  get_ittf_info.py
tests/: test_get_ittf_info.py
