[tool.poetry]
name = "get_ittf_info"
version = "0.2.0"
description = "Python package that helps scrape Table Tennis athletes and tournaments information from 'Table Tennis Guide' website and 'ITTF' official website"
authors = ["Mengdi Zhang"]
license = "MIT"
readme = "README.md"
documentation = 'https://get_ittf_info.readthedocs.io'
homepage = "https://github.com/MandyZ1998/get_ittf_info"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
lxml = "^4.7.1"
requests = "^2.26.0"
matplotlib = "^3.5.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
